[package]
name = "defew"
version = "0.1.2"
edition = "2021"
authors = ["mzyy94"]
license = "MIT OR Apache-2.0"
description = "A new() derive macro for structs"
readme = "README.md"
keywords = ["derive", "default", "macro"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0.39"
syn = { version = "2.0.99", features = ["full", "extra-traits"] }
