[package]
name = "defew"
version = "0.1.4"
edition = "2021"
authors = ["mzyy94"]
license = "MIT OR Apache-2.0"
description = "A new() derive macro for structs"
readme = "README.md"
keywords = ["derive", "default", "macro"]
categories = ["development-tools"]
repository = "https://github.com/mzyy94/defew"

rust-version = "1.81.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.94"
quote = "1.0.39"
syn = { version = "2.0.99", features = ["full", "extra-traits"] }
